Revision history for Perl extension Module::Plan::Base

0.09 xxx
	- Minor pod fix

0.08 Tue 16 Jan 2007
	- Minor testing fixes

0.07 Wed  3 Jan 2007
	- Essential CPAN::Inject version bump
	- Fixed local file handling on MSWin32

0.06 Wed  3 Jan 2007
	- Fixed a minor bug in the --install handling

0.05 Wed  3 Jan 2007
	- Added basic URI support

0.04 Wed 26 Oct 2006
	- Added the -i option to install a particular tarball

0.03 Mon 16 Oct 2006
	- It turns out .pip is taken by Microsoft, thwarting the potential
	  ability to associate plan files with pip and make then actually clickable.
	- Converted everything to .p5i

0.02 Sun 15 Oct 2006
	- Added pip.pm
	- Added real dists to t/data
	- Basic .pip plans work

0.01 Sun 15 Oct 2006
	- original version