@@ -1,7 +1,13 @@
 #!/usr/bin/perl
 
+use 5.005;
 use strict;
 use pip;
+
+use vars qw{$VERSION};
+BEGIN {
+	$VERSION = '0.10';
+}
 
 eval {
 	pip::main( @ARGV );
