@@ -1,4 +1,4 @@
 Module::Plan::Lite
 
 Process-0.17.tar.gz
-http://svn.phase-n.com/svn/cpan/releases/CPAN-Test-Dummy-Perl5-Developer-0.01_01.tar.gz
+http://svn.ali.as/cpan/releases/CPAN-Test-Dummy-Perl5-Developer-0.01_01.tar.gz
